# move-language-server

./: Cargo.toml  check_project.sh
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  fixture.rs  input.rs  lib.rs
crates/generate_ast/src/: ast.rs  generate_all.rs  main.rs  move.ungram  syntax_kind.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs
crates/ide_db/: Cargo.toml
crates/ide_db/src/: apply_change.rs  lib.rs
crates/ide_diagnostics/: Cargo.toml
crates/ide_diagnostics/src/: lib.rs
crates/move_language_server/: Cargo.toml  build.rs
crates/move_language_server/src/: caps.rs  config.rs  diagnostics.rs  dispatch.rs  from_proto.rs  global_state.rs  handlers.rs  lib.rs  line_index.rs  logger.rs  lsp_utils.rs  main_loop.rs  reload.rs  to_proto.rs
crates/parser/src/: grammar.rs  lexer.rs  parser.rs  syntax_kind.rs
crates/project_model/: Cargo.toml
crates/project_model/src/: dove_toml.rs  lib.rs  workspace.rs
crates/stdx/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs  parsing.rs  syntax_node.rs  tests.rs
crates/syntax/src/ast/: nodes.rs
crates/syntax/src/parsing/: text_tree_sink.rs
crates/syntax/test_data/parser/err/: 0001_binary_expression_recovery.move  0001_binary_expression_recovery.txt  0002_address_lit_recovery.move  0002_address_lit_recovery.txt
crates/syntax/test_data/parser/ok/: 0001_empty_script.txt  0002_binary_expression.move  0002_binary_expression.txt  0003_let_statement.move  0003_let_statement.txt  0004_assignments.txt  0005_literals.move  0005_literals.txt  address_definitions.move  address_definitions.txt  line_comments.move  line_comments.txt  module_definitions.move  module_definitions.txt
crates/test_utils/: Cargo.toml
crates/test_utils/src/: fixture.rs  lib.rs
editors/code/: package-lock.json  package.json
generate_ast/: Cargo.toml
generate_ast/src/: ast.rs  generate_all.rs  move.ungram  syntax_kind.rs  utils.rs
parser/: Cargo.toml
parser/src/: event.rs  grammar.rs  lexer.rs  lib.rs  marker.rs  parser.rs  syntax_kind.rs  token_set.rs
parser/src/grammar/: expressions.rs  items.rs  params.rs  paths.rs  patterns.rs  types.rs
parser/src/syntax_kind/: generated.rs
stdx/src/: lib.rs  process.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  parsing.rs  syntax_error.rs  syntax_node.rs  tests.rs
syntax/src/ast/: nodes.rs  tokens.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
(+16 files in other folders)
