[package]
name = "move-analyzer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/base_db",
    "crates/paths",
    "crates/vfs",
    "crates/syntax",
    "crates/parser",
    "crates/stdx",
    "crates/generate_ast",
    "crates/test_utils",
    "crates/ide",
]

